# OpenCL_PBR_PathTracer

./: CMakeLists.txt  README.md  Shader.h  Triangle.cpp  main.cpp  objLoader.cpp
include/: Material.h  Triangle.h  algebra3.h  bvh.h  matLoader.h  objLoader.h
include/glad/: glad.h
kernel/: init.cl  initAtomic.cl  kernel.cl  rayGeneration.cl  ray_generation.cl  sampleBybrdf.cl  traversal.cl
lib/: OpenCL.lib  glad.lib  glfw3dll.lib
scene/: ___untitled7.mtl  box_3.mtl  box_4.mtl  box_4_.mtl  box_5.mtl  box_6.mtl  box_8.mtl  box__4.mtl  test1.mtl  testt.mtl  testtt.mtl  untitled.mtl  untitled02.mtl  untitled2.mtl  untitled3.mtl  untitled4.mtl  untitled5.mtl  untitled6.mtl  untitled7.mtl
shader/: texture.fs
src/: Material.cpp  algebra3.cpp  bvh.cpp  main.cpp  matLoader.cpp
